--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: page
 title: 首页
 ---
+
+<h1>{{ site.title }}</h1>
+<h2>{{ site.description }}</h2>
 <div class="page page-index">
   {% for post in site.posts  -%}
     {%- capture post_year %}{{ post.date | date: "%Y" }}{% endcapture -%}
